correction de validation w3c des pages

--- a/restaurants/menu_a_la_francaise.html
+++ b/restaurants/menu_a_la_francaise.html
@@ -21,7 +21,6 @@
       <section class="logo">
          <nav class="navreturn">
             <a href="../index.html" class="buttonreturn"> <i class="fa-solid fa-arrow-left"></i> </a>
-
          </nav>
          <img class="img__logo" src="../assets/images/logo/ohmyfood.png" alt="Logo de ohmyfood">
       </section>
@@ -146,8 +145,8 @@
             <button class="btn__pageversion">Commander</button>
          </section>
 
+      </section>
    </main>
-
    <!-- footer_retroliens -->
    <footer>
       <h2>ohmyfood</h2>
@@ -164,11 +163,6 @@
          <p><a href="mailto:ohmyfood@gmail.com">Contact</a></p>
       </div>
    </footer>
-
-
 </body>
-
-
-</main>
 
 </html>
