--- a/restaurants/menu_palette_du_gout.html
+++ b/restaurants/menu_palette_du_gout.html
@@ -26,123 +26,127 @@
          <img class="img__logo" src="../assets/images/logo/ohmyfood.png" alt="Logo de ohmyfood">
       </section>
    </header>
-      <main>    
-               <img class="background--menu" src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-               alt="Menu la Palette du gout">
-            <section class="menu">
+   <main>
+      <img class="background--menu" src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Menu la Palette du gout">
+      <section class="menu">
+         <div class="menu__title">
+            <h1>La Palette du goût</h1>
+            <span class="main-container-heart">
+               <input type="checkbox" id="heart-checkbox" />
+               <label for="heart-checkbox">
+                  <i class="fa-2x fa-solid fa-heart full-heart"></i>
+                  <i class="fa-2x fa-regular fa-heart empty-heart"></i>
+               </label>
+            </span>
+         </div>
+         <div class="menu-full">
+            <div class="entree test">
                <div class="menu__title">
-                  <h1>La Palette du goût</h1>                  
-                  <span class="main-container-heart">
-                     <input type="checkbox" id="heart-checkbox" />
-                     <label for="heart-checkbox">
-                       <i class="fa-2x fa-solid fa-heart full-heart"></i>
-                       <i class="fa-2x fa-regular fa-heart empty-heart"></i>
-                     </label>
-                  </span>
+                  <h2>ENTRÉES</h2>
+                  <span class="title-line"></span>
                </div>
-               <div class="menu-full">
-                  <div class="entree test">
-                     <div class="menu__title">
-                        <h2>ENTRÉES</h2>
-                        <span class="title-line"></span> 
+               <div class="section__menu__cards">
+                  <article class="dish">
+                     <div class="yolo">
+                        <h3>Fricassée d'escargots</h3>
+                        <p>Au piment d'Espelette</p>
                      </div>
-                     <div class="section__menu__cards">
-                        <article class="dish">
-                           <div class="yolo">
-                              <h3>Fricassée d'escargots</h3>
-                              <p>Au piment d'Espelette</p>
-                           </div>
-                           <span class="price">25€</span>
-                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
-                        </article>
-                        <article class="dish">
-                           <div class="yolo">
-                              <h3>Foie gras de canard mi-cuit</h3>
-                              <p>Et ses copeaux de truffe noire</p>
-                           </div>
-                           <span class="price">35€</span>
-                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
-                        </article>
-                        <article class="dish">
-                           <div class="yolo">
-                              <h3>Oeuf au plat</h3>
-                              <p>Assaisonné à la truffe sur lit de caviar</p>
-                           </div>
-                           <span class="price">20€</span>
-                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
-                        </article>
+                     <span class="price">25€</span>
+                     <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                  </article>
+                  <article class="dish">
+                     <div class="yolo">
+                        <h3>Foie gras de canard mi-cuit</h3>
+                        <p>Et ses copeaux de truffe noire</p>
                      </div>
-                  </div>
+                     <span class="price">35€</span>
+                     <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                  </article>
+                  <article class="dish">
+                     <div class="yolo">
+                        <h3>Oeuf au plat</h3>
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                     </div>
+                     <span class="price">20€</span>
+                     <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                  </article>
                </div>
-               <div class="menu-full">
-                  <div class="plats test">
-                     <div class="menu__title">
-                        <h2>PLATS</h2>
-                        <span class="title-line"></span>
-                     </div>
-                     <div class="section__menu__cards">
-                        <article class="dish">
-                           <div class="yolo">
-                              <h3>Filet de boeuf aux herbes</h3>
-                              <p>Accompagné de sa ribambelle de légumes</p>
-                           </div>
-                           <span class="price">40€</span>
-                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
-                        </article>
-                        <article class="dish">
-                           <div class="yolo">
-                              <h3>Parmentier de queue de boeuf</h3>
-                              <p>A la truffe noire sur sa purée de panais</p>
-                           </div>
-                           <span class="price">35€</span>
-                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
-                        </article>
-                        <article class="dish">
-                           <div class="yolo">
-                              <h3>Filets de turbot</h3>
-                              <p>Aux agrumes</p>
-                           </div>
-                           <span class="price">44€</span>
-                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
-                        </article>
-                     </div>
-                  </div>
+            </div>
+         </div>
+         <div class="menu-full">
+            <div class="plats test">
+               <div class="menu__title">
+                  <h2>PLATS</h2>
+                  <span class="title-line"></span>
                </div>
-               <div class="menu-full">
-                  <div class="desserts test">
-                     <div class="menu__title">
-                        <h2>DESSERTS</h2>
-                        <span class="title-line"></span>
+               <div class="section__menu__cards">
+                  <article class="dish">
+                     <div class="yolo">
+                        <h3>Filet de boeuf aux herbes</h3>
+                        <p>Accompagné de sa ribambelle de légumes</p>
                      </div>
-                     <div class="section__menu__cards">
-                        <article class="dish">
-                           <div class="yolo">
-                              <h3>Paris-Brest</h3>
-                              <p>Revisité</p>
-                           </div>
-                           <span class="price">18€</span>
-                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
-                        </article>
-                        <article class="dish">
-                           <div class="yolo">
-                              <h3>Macaron au chocolat d'exception</h3>
-                              <p>Et la glace à la vanille de Madagascar</p>
-                           </div>
-                           <span class="price">22€</span>
-                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
-                        </article>
-                        <article class="dish">
-                           <div class="yolo">
-                              <h3>Mousse au chocolat</h3>
-                              <p>Aux piments d'Espelette et à la truffe noire</p>
-                           </div>
-                           <span class="price">35€</span>
-                           <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
-                        </article>
-                        <section class="container__btn">
-                           <button class="btn__pageversion">Commander</button>
-                        </section>                  
-       </main>
+                     <span class="price">40€</span>
+                     <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                  </article>
+                  <article class="dish">
+                     <div class="yolo">
+                        <h3>Parmentier de queue de boeuf</h3>
+                        <p>A la truffe noire sur sa purée de panais</p>
+                     </div>
+                     <span class="price">35€</span>
+                     <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                  </article>
+                  <article class="dish">
+                     <div class="yolo">
+                        <h3>Filets de turbot</h3>
+                        <p>Aux agrumes</p>
+                     </div>
+                     <span class="price">44€</span>
+                     <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                  </article>
+               </div>
+            </div>
+         </div>
+         <div class="menu-full">
+            <div class="desserts test">
+               <div class="menu__title">
+                  <h2>DESSERTS</h2>
+                  <span class="title-line"></span>
+               </div>
+               <div class="section__menu__cards">
+                  <article class="dish">
+                     <div class="yolo">
+                        <h3>Paris-Brest</h3>
+                        <p>Revisité</p>
+                     </div>
+                     <span class="price">18€</span>
+                     <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                  </article>
+                  <article class="dish">
+                     <div class="yolo">
+                        <h3>Macaron au chocolat d'exception</h3>
+                        <p>Et la glace à la vanille de Madagascar</p>
+                     </div>
+                     <span class="price">22€</span>
+                     <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                  </article>
+                  <article class="dish">
+                     <div class="yolo">
+                        <h3>Mousse au chocolat</h3>
+                        <p>Aux piments d'Espelette et à la truffe noire</p>
+                     </div>
+                     <span class="price">35€</span>
+                     <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                  </article>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section class="container__btn">
+         <button class="btn__pageversion">Commander</button>
+      </section>
+   </main>
+   
    <!-- footer_retroliens -->
    <footer>
       <h2>ohmyfood</h2>
